Input preview organized, just displays name of projects and work so its not too detailed but still visible on preview side. need to fix overflow but afte that can move on to preview styling

--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,18 @@
     align-items: center;
 }
 
+.delete-button{
+    font-family: inherit;
+    font-weight: 400;
+    font-size: 1em;
+    padding: 8px 10px;
+    border: none;
+    border-radius: 15px;
+    background-color: rgb(238, 176, 176);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.222);
+    cursor: pointer;
+}
+
 .template-container{
     width: 1000px;
     height: 700px;
@@ -61,6 +73,7 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
+    overflow: auto;
 
 }
 .button-container{
@@ -138,6 +151,16 @@
     cursor: pointer;
     margin: 10px;
     align-self: flex-start;
+}
+
+.input-preview{
+    box-sizing: border-box;
+    width: 400px;
+    display: flex;
+    justify-content: space-between;
+    overflow: auto;
+    padding: 5px;
+    margin: 3px;
 }
 
 .skills-section{
